email and password input layout hints renamed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,11 @@
     <string name="app_name">ProAct</string>
     <string name="prev">Назад</string>
     <string name="next">Далее</string>
+    <string name="emailinputlayout_hint">Почта</string>
+    <string name="passinputlayout_hint">Пароль</string>
     <string name="selected_dot_description">selected dot</string>
     <string name="dot_description">dot</string>
     <!--LogScreen string resources-->
-    <string name="logscreen_emailinputlayout_hint">Почта</string>
-    <string name="logscreen_passinputlayout_hint">Пароль</string>
 
     <string name="logscreen_entry_button">Войти</string>
     <string name="logscreen_register_button">Зарегистрироваться</string>
@@ -28,4 +28,6 @@
     <string name="role_title">Кто вы?</string>
     <string name="customer_role">Заказчик</string>
     <string name="worker_role">Студент</string>
+
+    <!--register step two fragment resources-->
 </resources>
