--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,22 @@
 <resources>
     <!--Common string resources-->
     <string name="app_name">ProAct</string>
+
     <string name="name">Имя</string>
     <string name="surname">Фамилия</string>
+    <string name="company_surname">Фамилия/Компания</string>
     <string name="middlename">Отчество</string>
     <string name="spec">Направление</string>
     <string name="group_number">Номер группы</string>
     <string name="phone">Телефон</string>
     <string name="about">О себе</string>
+
     <string name="prev">Назад</string>
     <string name="next">Далее</string>
+    <string name="done">Готово</string>
+
+    <string name="emailinput_error">Введите почту</string>
+    <string name="passinput_error">Введите пароль</string>
 
     <string name="emailinputlayout_hint">Почта</string>
     <string name="passinputlayout_hint">Пароль</string>
@@ -29,8 +36,6 @@
     <string name="vk_logo">VKontakte logo</string>
     <string name="yandex_logo">Yandex logo</string>
 
-    <string name="logscreen_emailinput_error">Введите почту</string>
-    <string name="logscreen_passinput_error">Введите пароль</string>
     <string name="logscreen_login_error">Не удалось войти. Проверьте почту или пароль</string>
 
     <!--Role fragment string resources-->
@@ -39,4 +44,5 @@
     <string name="worker_role">Студент</string>
 
     <!--register step two fragment resources-->
+    <string name="email_exist">Пользователь с такой почтой уже существует</string>
 </resources>
