--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,14 @@
 
     <!--register step four resources-->
     <string name="register_error">Не удалось зарегистрироваться, проверьте введённые данные</string>
+
+    <!--main menu string resources-->
+    <string name="all_projects">Все проекты</string>
+    <string name="my_projects">Мои проекты</string>
+    <string name="profile">Профиль</string>
+
+    <!--main navigation labels-->
+    <string name="all_projects_label">Все проекты</string>
+    <string name="my_projects_label">Мои проекты</string>
+    <string name="profile_label">Профиль</string>
 </resources>
