all project fragment added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,10 @@
     <string name="all_projects_label">Все проекты</string>
     <string name="my_projects_label">Мои проекты</string>
     <string name="profile_label">Профиль</string>
+
+    <!--project strings-->
+    <string name="project_curator">Куратор: %s</string>
+    <string name="project_quantity">Свободных мест: %d</string>
+    <string name="project_status">Статус: %s</string>
+    <string name="project_about">%s…</string>
 </resources>
