--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,6 @@
     <string name="project_about">%s…</string>
     <string name="project_full_about">Описание: %s</string>
     <string name="sign_button">Записаться</string>
-    <style name="team_number">Команда #%s</style>
-    <style name="member_text">%s: %s</style>
+    <string name="team_number">Команда #%d</string>
+    <string name="member_text">%s: %s</string>
 </resources>
