--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,10 +72,19 @@
     <!--project strings-->
     <string name="project_curator">Куратор: %s</string>
     <string name="project_quantity">Свободных мест: %d/%d</string>
+    <string name="project_deadline">Запись до: %s</string>
     <string name="project_status">Статус: %s</string>
     <string name="project_about">%s…</string>
     <string name="project_full_about">Описание: %s</string>
     <string name="sign_button">Записаться</string>
     <string name="team_number">Команда #%d</string>
     <string name="member_text">%s: %s</string>
+
+    <!--add prjcets screen strings-->
+    <string name="project_title_hint">Название проекта</string>
+    <string name="project_deadline_hint">Запись до</string>
+    <string name="project_specs_hint">Кто вам нужен*</string>
+    <string name="project_specs_helper">Разделяйте запятой</string>
+    <string name="project_teams_hint">Количество команд</string>
+
 </resources>
