--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,17 +74,48 @@
     <string name="project_quantity">Свободных мест: %d/%d</string>
     <string name="project_deadline">Запись до: %s</string>
     <string name="project_status">Статус: %s</string>
-    <string name="project_about">%s…</string>
+    <string name="project_about_short">%s…</string>
     <string name="project_full_about">Описание: %s</string>
     <string name="sign_button">Записаться</string>
     <string name="team_number">Команда #%d</string>
     <string name="member_text">%s: %s</string>
 
-    <!--add prjcets screen strings-->
+    <!--add projects screen strings-->
     <string name="project_title_hint">Название проекта</string>
     <string name="project_deadline_hint">Запись до</string>
     <string name="project_specs_hint">Кто вам нужен*</string>
     <string name="project_specs_helper">Разделяйте запятой</string>
     <string name="project_teams_hint">Количество команд</string>
+    <string name="project_about_hint">О проекте</string>
+    <string name="project_tag_text">Добавить тег</string>
+    <string name="project_add_button">Добавить проект</string>
+    <string name="project_added_text">Проект создан и отправлен на рассмотрение</string>
+    <string name="project_added_error">Не удалось создать проект</string>
 
+    <!--add projcets scree error strings-->
+    <string name="project_title_error">Добавьте название проекта</string>
+    <string name="project_deadline_error">Добавьте дату последнего дня записи</string>
+    <string name="project_specs_error">Добавьте необходимые Вам специализации</string>
+    <string name="project_teams_error">Укажите количество команд</string>
+    <string name="project_teams_helper">Не больше 10</string>
+    <string name="project_teams_number_error">Количество команд не может равняться 0</string>
+    <string name="project_about_error">Добавьте описание</string>
+    <string name="poject_empty_tags_error">Добавьте хотя бы 1 тег</string>
+    <string name="project_specs_overflow_error">Количество специализаций должно быть меньше 10</string>
+    <string name="project_teams_overflow_error">Количество команд должно быть меньше 10</string>
+    <!--dialogs strings-->
+    <string name="ok_button">ОК</string>
+    <string name="cancel_button">Отменить</string>
+    <string name="tags_dialog_title">Выберите теги для проекта</string>
+
+    <!--tags array-->
+    <string-array name="tags_array">
+        <item>Фронтенд</item>
+        <item>Бэкенд</item>
+        <item>Веб-дизайн</item>
+        <item>Android</item>
+        <item>IOS-разработка</item>
+        <item>Маркетинг</item>
+        <item>SMM</item>
+    </string-array>
 </resources>
