--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,9 @@
     <string name="sign_button">Записаться</string>
     <string name="team_number">Команда #%d</string>
     <string name="member_text">%s: %s</string>
+    <string name="project_request_error">Не удалось записаться на проект</string>
+    <string name="project_request_created">Заявка на проект подана</string>
+    <string name="project_request_exist">Заявка уже подана</string>
 
     <!--add projects screen strings-->
     <string name="project_title_hint">Название проекта</string>
