--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="project_curator">Куратор: %s</string>
     <string name="project_quantity">Свободных мест: %d/%d</string>
     <string name="project_deadline">Запись до: %s</string>
+    <string name="project_finish_date">Конец проекта: %s</string>
     <string name="project_status">Статус: %s</string>
     <string name="project_about_short">%s…</string>
     <string name="project_full_about">Описание: %s</string>
