add selecting projects by tag

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -157,4 +157,7 @@
     <string name="on_review">On review</string>
     <string name="accepted">Accepted</string>
     <string name="denied">Denied</string>
+
+    <!--TagProjectsActivity string-->
+    <string name="tag_toolbar_title">Selected tag: %s</string>
 </resources>
