add string for DetailedProject screen

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,6 +11,8 @@
     <string name="phone">Phone</string>
     <string name="about">About</string>
 
+    <string name="free">Free</string>
+
     <string name="prev">Prev</string>
     <string name="next">Next</string>
     <string name="done">Done</string>
